--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "### Background",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "webpack": "^3.5.6"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
